# folia-rust

./: .travis.yml  Cargo.toml  README.md
src/: attrib.rs  common.rs  document.rs  element.rs  elementstore.rs  error.rs  lib.rs  main.rs  metadata.rs  parser.rs  properties.rs  query.rs  select.rs  serialiser.rs  specification.rs  store.rs  text.rs  types.rs
tests/: main.rs
