[package]
name = "folia"
version = "0.0.2"
description = "High-performance library for handling the FoLiA XML format (Format for Linguistic Annotation)"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
homepage = "https://proycon.github.io/folia"
repository = "https://github.com/proycon/folia-rust"
documentation = "https://docs.rs/folia"
categories = ["science","text-processing"]
keywords = ["nlp","text-processing","annotation","linguistics","xml"]
license = "GPL-3.0+"
readme = "README.md"
edition = "2018"



[badges]
travis-ci = { repository = "proycon/folia-rust", branch = "master" }
maintenance = { status = "actively-developed" }


[dependencies]
quick-xml = "0.16.0"
matches = "0.1.8"
strum = "0.16.0"
strum_macros = "0.16.0"
clap = "2.33.0"
libc = "0.2.62"
